# binja_tools

./: .gitignore  README.md  find_open_ports.py
binjalib/: README.md  search.py  varslice.py
docker/: README  README.md  binwalk.docker
plugins/: mips16e2_architecture.py  mips16e2_disassembler.py
plugins/bn-mips16/: __init__.py  architecture.py  disassembler.py  plugin.json
plugins/mips/: .gitignore  CMakeLists.txt  README.md  add_dependencies  api_REVISION.txt  arch_mips.cpp  il.cpp
plugins/mips/mips/: mips.c  mips.h
plugins/poke/: CMakeLists.txt  README.md
plugins/universal-arch/: add_dependencies  api_REVISION.txt  architecture.cpp
poke_plugin/: .gitignore  CMakeLists.txt  README.md  add_dependencies  api_REVISION.txt
poke_plugin/src/: poke_plugin.cpp
poke_scripts/: text_section_extractor.pk
scripts/: unblob
